--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 <body>
     <div class="form-container">
         <div class="header">
-            <img src="./logo.png" alt="Company Logo">
+            <img src="ATS Wallpaper.jpg" alt="Company Logo" class="logo">
             <h2 style="color: rgb(0, 0, 0); font-size: 40px;">Asset Delivery Form</h2>
         </div>
         <form onsubmit="return handleFormSubmission()">
